--- a/stream/share.html
+++ b/stream/share.html
@@ -10,12 +10,21 @@
 </head>
 
 <body>
-
-  <h1>Realtime communication with WebRTC - step 05</h1>
-
+<header>
+  <h1>Narwhal</h1>
+  <div id="room-name">hey</div>
+  <button>Partager le Stream</button>
+</header>
+<section>
   <div id="videos">
     <video id="localVideo" autoplay muted playsinline></video>
   </div>
+</section>
+<footer>
+  <div>
+
+  </div>
+</footer>
 
   <!-- This file is automatically added/served when running "node index.js". -->
   <script src="../socket.io/socket.io.js"></script>
