--- a/stream/share.html
+++ b/stream/share.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-
   <title>Realtime communication with WebRTC</title>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="css/share.css"/>
 </head>
@@ -12,8 +13,8 @@
 <body>
 <header>
   <h1>Narwhal</h1>
-  <div id="room-name">hey</div>
-  <button>Partager le Stream</button>
+  <div id="room-name"></div>
+  <button onclick="copyRoom()" >Partager le Stream</button>
 </header>
 <section>
   <div id="videos">
@@ -22,7 +23,7 @@
 </section>
 <footer>
   <div>
-
+    <b id="viewers"></b>
   </div>
 </footer>
 
