--- a/stream/share.html
+++ b/stream/share.html
@@ -18,7 +18,7 @@
 </header>
 <section>
   <div id="videos">
-    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="localVideo" autoplay muted playsinline height="866px" width="1200px"></video>
   </div>
 </section>
 <footer>
