Fix viewer count

--- a/stream/watch.html
+++ b/stream/watch.html
@@ -16,7 +16,7 @@
 <h1>Realtime communication with WebRTC - step 05</h1>
 
 <div id="videos">
-  <video id="remoteVideo" autoplay playsinline></video>
+  <video id="remoteVideo" autoplay playsinline controls></video>
 </div>
 
 <!-- This file is automatically added/served when running "node index.js". -->
