--- a/stream/watch.html
+++ b/stream/watch.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-
-<h1>Realtime communication with WebRTC - step 05</h1>
+<svg class="icon" width="40" height="40" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M30.9375 84.375C26.1211 84.375 22.5 80.4375 22.5 75.9375V14.0625C22.5 9.6012 26.0859 5.62854 30.9393 5.62854C32.4661 5.62854 33.9891 6.04198 35.3373 6.86446L85.9623 37.802C88.4707 39.3399 90 42.0645 90 45C90 47.9356 88.4702 50.6655 85.9623 52.1983L35.3373 83.1358C33.9961 83.9532 32.4668 84.375 30.9375 84.375Z" fill="#8AFF80"/>
+</svg>
+<h1>You are now Watching</h1>
 
 <div id="videos">
   <video id="remoteVideo" autoplay playsinline controls></video>
