Minor changes for html and css

--- a/stream/watch.html
+++ b/stream/watch.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="../css/main.css"/>
 
 </head>
 
@@ -19,7 +19,7 @@
   <h1>You are now Watching...</h1>
 </header>
 <section>
-  <div id="videos">
+  <div id="videos" class="watch">
     <video id="remoteVideo" autoplay playsinline controls></video>
   </div>
 </section>
