--- a/stream/share.html
+++ b/stream/share.html
@@ -30,7 +30,7 @@
   </div>
 </header>
 <section>
-  <div id="videos">
+  <div id="videos" class="share">
     <video id="localVideo" autoplay muted playsinline></video>
   </div>
 </section>
